Changes for 1.8.3

 - [ZBXNEXT-279] added links to parent elements for item and trigger form (Vedmak)
 - [ZBX-2376] port parameter to tcp and tcp_perf is now mandatory (asaveljevs)
 - [ZBX-2376] added ldap, ldap_perf, ntp, and ntp_perf simple checks (asaveljevs)
 - [ZBX-808] renamed service.ntp parameter of net.tcp.service{.perf} to ntp (asaveljevs)
 - [ZBX-2011] plain ASCII subjects are no longer base64-encoded, fixes issues with email to SMS gateways (asaveljevs)
 - [ZBXNEXT-319] multirow inserts are now used for PostgreSQL 8.2 and higher (asaveljevs)
 - [ZBXNEXT-392] our daemons no longer crash after "strace -p" (asaveljevs)
 - [ZBXNEXT-138] our daemons can now listen on multiple IPs, see ListenIP configuration parameter (asaveljevs)
 - [ZBX-2031] fixed comparison of empty strings with Oracle that led to duplicate rows in dservices (asaveljevs)
 - [ZBX-2409] fixed server crash when deleting unreachable hosts in discovery (asaveljevs)
 - [DEV-461] changes in GUI configuration menu (Aly)
 - [ZBX-2473] fixed timescroll most right position when "now" (Aly)
 - [ZBX-1193] improved macros form (Vedmak)
 - [ZBX-2035] fixed host full cloning (Vedmak)
 - [ZBX-1986] fixed empty Y axis if item values are zeros (Aly)
 - [ZBX-2492] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-1357] update Hungarian translation; thanks to Laszlo Szabo (Richlv)
 - [ZBX-2489] fixed server crash when receiving data using the old protocol (asaveljevs)
 - [ZBX-2474,ZBXNEXT-378] fixed page refresh on filter change, now all filters hiding and showing works without refresh (Maxim Andruhovich / AM)
 - [ZBX-2488] changed filter from Web Monitoring to External Check (Maxim Andruhovich / AM)
 - [ZBX-2483] fixed showing latest data by filter when clicking from dashboard with GUI option 'Dropdown first entry' -> None (Maxim Andruhovich/AM)
 - [ZBX-1529] fixed macros expand to nothing in templates (Vedmak)